# drpe/models/audit.py
@@ -17,6 +17,7 @@ class AuditEventType(str, Enum):
     FLAG = "flag"
     DSAR_ACCESS = "dsar_access"
     DSAR_ERASURE = "dsar_erasure"
+    GRACE_CANCELLED = "grace_cancelled"
 
 
 class AuditEntry(BaseModel):
